# agentciv-engine

./: .gitignore  .mcp.json  CLAUDE.md  README.md  ROADMAP.md  agentciv_paper5_creator_mode.md  pyproject.toml
.github/workflows/: bitcoin-timestamp.yml
agentciv/: __init__.py  cli.py  discovery.py  display.py  experiment.py  gardener.py
agentciv/benchmark/: __init__.py  analysis.py  city_grid.py  city_renderer.py  city_scorer.py  metrics.py  report.py  runner.py  tasks.py
agentciv/chronicle/: observer.py
agentciv/core/: agent.py  attention.py  context.py  engine.py  event_bus.py  parser.py  stepper.py  tools.py  types.py
agentciv/learning/: __init__.py  history.py  insights.py  recorder.py
agentciv/llm/: client.py
agentciv/mcp/: __init__.py  __main__.py  display.py  server.py  session.py
agentciv/org/: auto.py  config.py  enforcer.py
agentciv/presets/: auto.yaml  collaborative.yaml  hierarchical.yaml  open-source.yaml  (+1 more)
benchmark_results/: RUN_INSTRUCTIONS.md  methodology.md
docs/: APPLE_STYLE_GUIDE.md  BENCHMARK_EXECUTION_PLAN.md  BENCHMARK_PLAN.md  CREATOR_MODE.md  EXPERIMENT_PAGE_PLAN.md  PAPER_PLAN.md  PAPER_SEVENTY_TICKS_PLAN.md  WEBSITE_PLAN.md  WHITEPAPER_PLAN.md  agentciv_paper4_organisational_arrangement.md  agentciv_paper4_organisational_arrangement.md.ots  commit_b1d9cac.ots  paper6_draft_v1.md  paper9_seventy_ticks_v1.md
paper/: paper6_draft_v1.md  paper9_seventy_ticks_v1.md
presets/: auto.yaml  code-review.yaml  competitive.yaml  hackathon.yaml  meritocratic.yaml  military.yaml  pair-programming.yaml  startup.yaml  swarm.yaml
provenance/: PROVENANCE.md  agentciv_paper4_organisational_arrangement.md.ots  commit_06e8048.ots  commit_06e8048.ots.bak  commit_0bcfe01.ots  commit_160edcf.ots  commit_1e33868.ots  commit_1ea6c20.ots  commit_24349fb.ots  commit_243608f.ots  commit_243608f.ots.bak  commit_2480d2d.ots  commit_2935174.ots  commit_2aeeb1a.ots  commit_2d73a50.ots  commit_34ba7ea.ots  commit_355817e.ots  commit_3729fe4.ots  commit_38db56e.ots  commit_3b294ad.ots  commit_4556422.ots  commit_4c18ecd.ots  commit_4fdd1e0.ots  commit_5bd93cf.ots  commit_5e3ed8d.ots  commit_5e3ed8d.ots.bak  commit_7971240.ots  commit_7971240.ots.bak  commit_805f543.ots  commit_805f543.ots.bak  commit_846368e.ots  commit_8d8d6c2.ots  commit_8d8d6c2.ots.bak  commit_939278e.ots  commit_9b68eb1.ots  commit_9ec8dc7.ots  commit_9ec8dc7.ots.bak  commit_9fdbf4f.ots  commit_b1d9cac.ots  commit_b477b4c.ots  (+29 more)
(+36 files in other folders)
