[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentciv-engine"
version = "0.1.0"
description = "Organisational arrangement as a design parameter for multi-agent AI systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Mark E. Mala" }]

dependencies = [
    "pyyaml>=6.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "mcp>=1.0.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
]

[project.scripts]
agentciv = "agentciv.cli:main"

[tool.setuptools.packages.find]
include = ["agentciv*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
