[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentciv-engine"
version = "0.1.0"
description = "Organisational arrangement as a design parameter for multi-agent AI systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Mark E. Mala" }]
keywords = ["multi-agent", "ai", "organisational-design", "llm", "collective-intelligence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pyyaml>=6.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "mcp>=1.0.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/wonderben-code/agentciv-engine"
Repository = "https://github.com/wonderben-code/agentciv-engine"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
]

[project.scripts]
agentciv = "agentciv.cli:main"

[tool.setuptools.packages.find]
include = ["agentciv*"]

[tool.setuptools.package-data]
agentciv = ["presets/*.yaml"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
